# tmdb-mteam-hub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: docker-publish.yml  quality.yml
deploy/nas/: README.md  docker-compose.yml
docs/adr/: 0001-standalone-detail-routes.md  0002-subscription-state-convergence.md  0003-latest-subscription-storage-only.md
docs/architecture/: data-storage.md  overview.md
docs/archive/: README.md
docs/operations/: backup-restore.md  configuration.md  housekeeping.md  security-bootstrap.md  security.md  troubleshooting.md  upgrade-rollback.md
e2e/: README.md  app.spec.js  fixture-server.mjs  fixture-server.test.mjs  visual.spec.js
frontend/: index.html  jsconfig.api.json
frontend/src/: App.vue  main.js  styles.css
scripts/: generate-api-contracts.mjs
scripts/ci/: container-acceptance.sh  verify-backend-boundaries.sh  verify-delivery-contracts.mjs  verify-openapi-parity.mjs
src/: app.rs  config.rs  douban.rs  lib.rs  main.rs  qbittorrent.rs  subscription.rs  tmdb_cache.rs  torrent_hash.rs  wikidata.rs
src/app/: audit.rs  auth_security.rs  douban_catalog.rs  manual_qb.rs  media_catalog.rs  mteam_search.rs  redaction.rs
src/clients/: douban.rs  http.rs  mod.rs  mteam.rs  qbittorrent.rs  tmdb.rs
src/http/: auth.rs  config.rs  douban.rs  error.rs  health.rs  media.rs  (+10 more)
static/: app.js  components.css  index.html  style.css
tests/: router_contract.rs  upstream_client_policy.rs
(+204 files in other folders)
