[package]
name = "tmdb-mteam-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
ring = "0.17.14"
subtle = "2.6"
libc = "0.2"
rusqlite = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "=0.5.3", features = ["util"] }
